--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -1,5 +1,5 @@
 footer.footer
     div.footer_icon
         i.fab.fa-youtube
-    span.footer_text &copy; 2019 Youtube
+    span.footer_text &copy; #{new Date().getFullYear()} #{siteName}
 
