--- a/views/changePassword.pug
+++ b/views/changePassword.pug
@@ -1,1 +1,10 @@
 extends layouts/main
+
+block content
+    .form__container
+        form(action="routes.changePassword", method = "post")
+            input(type="password", name="password", placeholder="Current Password")
+            input(type="password", name="newPassword", placeholder="New Password")
+            input(type="password", name="newPassword2", placeholder="Verify New Password")
+            input(type="submit", value="Change Password")
+        
