--- a/views/editProfile.pug
+++ b/views/editProfile.pug
@@ -1,1 +1,11 @@
 extends layouts/main
+
+block content
+    .form__container
+        form(action=routes.editProfile, method = "post")
+            label(for="avatar") Avatar
+            input(type="file", id="avatar", name="avatar")
+            input(type="text", name="name", placeholder="Name")
+            input(type="email", name="email", placeholder="Email")
+            input(type="submit", value="Update Profile")
+        a.form-container__link(href=`/users${routes.changePassword}`) Change Password
