--- a/views/login.pug
+++ b/views/login.pug
@@ -1,1 +1,8 @@
 extends layouts/main
+
+block content
+    .form__container
+        form(action=routes.login, method = "post")
+            input(type="email", name="email", placeholder="Email",required=true)
+            input(type="password", name="password", placeholder="Password",required=true)
+            input(type="submit", value="Log In")
