--- a/views/upload.pug
+++ b/views/upload.pug
@@ -1,1 +1,11 @@
 extends layouts/main
+
+block content
+    .form__container
+        form(action=`/videos${routes.upload}`, method = "post")
+            label(for="VideoFile") Video File
+            input(type="file", id="videoFile", name="videoFile", required=true)
+            input(type="text", name="tile", placeholder="Title", required=true)
+            input(type="text", name="description", placeholder="Description", required=true)
+            input(type="submit", value="Upload Video")
+        
