update, edit Video Complete!!

--- a/views/videoDetail.pug
+++ b/views/videoDetail.pug
@@ -1,1 +1,10 @@
 extends layouts/main
+
+block content
+    .video__player
+        video(src=`/${video.fileUrl}`, autoplay="true", controls="true")
+    .video__info
+        a(href=routes.editVideo(video.id)) Edit Video
+        h5.video__title=video.title
+        p.video__views=video.views
+        p.video__description=video.description
