--- a/views/editVideo.pug
+++ b/views/editVideo.pug
@@ -2,10 +2,10 @@ extends layouts/main
 
 block content
     .form__container
-        form(action=routes.editVideo, method = "post")
-            label(for="VideoFile") Video File
-            input(type="text", name="tile", placeholder="Title")
-            input(type="text", name="description", placeholder="Description")
+        form(action=`${routes.editVideo(video.id)}`, method = "post")
+            input(type="text", name="tile", placeholder="Title", value=video.title)
+            textarea(name="description", placeholder="Description")=video.description
             input(type="submit", value="Update Video")
-        a.form-container__link(href=`/videos${routes.deleteVideo}`) Delete Video
+        a.form-container__link(href=routes.deleteVideo(video.id)) 
+            button.delete Delete Video
         
