--- a/views/upload.pug
+++ b/views/upload.pug
@@ -1,11 +1,10 @@
 extends layouts/main
 
 block content
-    .form__container
-        form(action=`/videos${routes.upload}`, method = "post", enctype = "multipart/form-data")
-            label(for="VideoFile") Video File
-            input(type="file", id="videoFile", name="videoFile", required=true, accept="video/*")
-            input(type="text", name="tile", placeholder="Title", required=true)
-            input(type="text", name="description", placeholder="Description", required=true)
+    .form-container
+        form(action=`/videos${routes.upload}`, method="post", enctype="multipart/form-data")
+            label(for="file") Video File
+            input(type="file", id="file", name="videoFile", required=true, accept="video/*")
+            input(type="text", placeholder="Title", name="title", required=true)
+            textarea(name="description", placeholder="Description", required=true)
             input(type="submit", value="Upload Video")
-        
