--- a/views/search.pug
+++ b/views/search.pug
@@ -2,12 +2,15 @@ extends layouts/main
 include mixins/videoBlock
 
 block content
-    .search__header 
-        h3 Searching by:#{searchingBy}
+    .search__header
+        h3 Searching for: #{searchingBy}
     .search__videos
-        each video in videos
-           +videoBlock({
-               title:video.title,
-               views:video.views,
-               videoFile:video.videoFile
-           })
+        if videos.length === 0
+            h5 No Videos Found
+        each item in videos
+            +videoBlock({
+                title:item.title,
+                views:item.views,
+                videoFile:item.fileUrl,
+                id:item.id
+            })
