--- a/assets/scss/partials/header.scss
+++ b/assets/scss/partials/header.scss
@@ -7,7 +7,7 @@
     padding: 5px 0px;
     width: 100%;
     max-width: 1200px;
-    grid-template-columns: 1fr 1.5fr 1fr;
+    grid-template-columns: repeat(3, 1fr);
     align-items: center;
     .header_column {
       i {
@@ -28,6 +28,21 @@
         text-transform: uppercase;
         li:not(:last-child) {
           margin-right: 15px;
+        }
+      }
+      form {
+        width: 100%;
+        input {
+          padding: 7px 10px;
+          width: 100%;
+          border-radius: 5px;
+          font-size: 14px;
+          color: $black;
+          font-weight: 600;
+          &::placeholder {
+            font-weight: 300;
+            color: rgba(0, 0, 0, 0.7);
+          }
         }
       }
     }
